--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
     .center{width:44%;}
     .corner{padding:10px 12px;font-size:13px;}
   }
+  /* アイコンサイズを統一（四隅リンク） */
+  .wheel .corner svg{width:22px;height:22px;}
+  .wheel .corner.br svg{width:22px;height:22px;}
 </style>
 </head>
 <body>
@@ -159,7 +162,7 @@
       </div>
       <div class="actions">
         <button class="btn ghost" id="toggleTheme" title="テーマ切替">🌓</button>
-        <a class="btn primary" href="#shitenno">4WD へ</a>
+        
       </div>
     </div>
     <div class="searchbar">
@@ -358,7 +361,7 @@
 
   <footer>
     <div>当ページはリンクポータルです。各ツールの最終確認は必ず実務手順・法令に照らして行ってください。</div>
-    <div style="margin-top:8px">© Matsumoto Kaikei — Tools Portal <strong>r3</strong> / 最終更新: 2025-09-21</div>
+    <div style="margin-top:8px">© Matsumoto Kaikei — Tools Portal <strong>r4</strong> / 最終更新: 2025-09-21</div>
   </footer>
 
   <div class="toast" id="toast">URLをコピーしました</div>
