--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
   .wheel .corner svg{width:28px;height:28px;}
   .wheel .corner.br svg{width:28px;height:28px;}
   /* --- 4WD corner positions: align to tyre centers --- */
-  #link-pl{top:7%; left:7%;}
-  #link-convert{top:7%; right:7%;}
-  #link-jinkenhi{bottom:7%; left:7%;}
-  #link-jidouka{bottom:7%; right:7%;}
+  #link-pl{top:10%; left:10%;}
+  #link-convert{top:10%; right:10%;}
+  #link-jinkenhi{bottom:10%; left:10%;}
+  #link-jidouka{bottom:10%; right:10%;}
   .hub img{width:100%;height:100%;object-fit:contain;}
   /* Layering & corner positions (pull away from car) */
   .hub{z-index:1;}
@@ -161,6 +161,7 @@
   #link-convert{top:7%; right:7%;}
   #link-jinkenhi{bottom:7%; left:7%;}
   #link-jidouka{bottom:7%; right:7%;}
+  .hub img.carimg{width:100%;height:100%;object-fit:contain;display:block;}
 </style>
 </head>
 <body>
@@ -194,35 +195,8 @@
 
     <!-- 黒字経営4WD：車の四輪レイアウト -->
     <div class="wheel" role="group" aria-label="黒字経営4WD：四輪レイアウト">
-      <div class="hub" aria-label="4WDハブ・車イラスト">
-        <svg viewBox="0 0 140 140" aria-hidden="true" focusable="false">
-          <!-- Body (wider & squarer) -->
-          <rect x="45" y="8" width="50" height="124" rx="16" fill="currentColor"/>
-
-          <!-- Side mirrors -->
-          <path d="M48 66c0-2 2-4 4-4h2v8h-2c-2 0-4-2-4-4Z" fill="currentColor"/>
-          <path d="M92 66c0-2-2-4-4-4h-2v8h2c2 0 4-2 4-4Z" fill="currentColor"/>
-
-          <!-- Windows (front/back aligned) -->
-          <path d="M60 52 h20 l6 6 v6 l-6 6 h-20 l-6 -6 v-6 z" fill="#ffffff" fill-opacity="0.96"/>
-          <path d="M60 96 h20 l6 6 v6 l-6 6 h-20 l-6 -6 v-6 z" fill="#ffffff" fill-opacity="0.96"/>
-
-          <!-- Headlight highlights (front only) -->
-          <ellipse cx="60" cy="19" rx="6" ry="4" fill="#ffffff"/>
-          <ellipse cx="80" cy="19" rx="6" ry="4" fill="#ffffff"/>
-
-          <!-- Tyres (protruding rectangles) -->
-          <rect x="12" y="26" width="26" height="32" fill="currentColor"/>
-          <rect x="12" y="86" width="26" height="32" fill="currentColor"/>
-          <rect x="102" y="26" width="26" height="32" fill="currentColor"/>
-          <rect x="102" y="86" width="26" height="32" fill="currentColor"/>
-
-          <!-- Connectors: tyres ↔ body (thin bars) -->
-          <rect x="38" y="40" width="7" height="8" fill="currentColor"/>
-          <rect x="38" y="100" width="7" height="8" fill="currentColor"/>
-          <rect x="95" y="40" width="7" height="8" fill="currentColor"/>
-          <rect x="95" y="100" width="7" height="8" fill="currentColor"/>
-        </svg>
+      <div class="hub" aria-label="4WDハブ・車画像">
+        <img class="carimg" alt="4WD car" src="data:image/png;base64,7/BkDddLzsVShnSdmi3hbiPRvDGIdy3JUO1Mln5pAtN5t6anmrwbu89ja+a2LnRO...7YoryqtWTPw8FzqfKb/13Ss8BRBfz25c7f8/fY8zbc/CaAcAAAAASUVORK5CYII="/>
       </div>
 
       <!-- Four corner tool links (as siblings of hub, to avoid overlap) -->
@@ -377,7 +351,7 @@
 
   <footer>
     <div>当ページはリンクポータルです。各ツールの最終確認は必ず実務手順・法令に照らして行ってください。</div>
-    <div style="margin-top:8px">© Matsumoto Kaikei — Tools Portal <strong>r15</strong> / 最終更新: 2025-09-21</div>
+    <div style="margin-top:8px">© Matsumoto Kaikei — Tools Portal <strong>r17</strong> / 最終更新: 2025-09-21</div>
   </footer>
 
   <div class="toast" id="toast">URLをコピーしました</div>
