--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   #link-jinkenhi{bottom:12%; left:12%;}
   #link-jidouka{bottom:12%; right:12%;}
   /* 変動損益を車の上（中央）に配置 */
-  .wheel .oncar{top:50%; left:50%; transform:translate(-50%,-50%);}
+  .wheel .oncar{top:50%; left:50%; transform:translate(-50%,-50%); background:rgba(255,255,255,.86); backdrop-filter:saturate(1.1) blur(2px); border:1px solid var(--line);} 
   /* r22 override: bigger car hub & translucent oncar chip */
   .hub{width:clamp(320px,56vw,520px); height:clamp(320px,56vw,520px);} 
   .wheel .oncar{top:28%; left:50%; transform:translate(-50%,-50%); background:rgba(255,255,255,.86); backdrop-filter:saturate(1.1) blur(2px); border:1px solid var(--line);} 
@@ -408,7 +408,7 @@
 
   <footer>
     <div>当ページはリンクポータルです。各ツールの最終確認は必ず実務手順・法令に照らして行ってください。</div>
-    <div style="margin-top:8px">© Matsumoto Kaikei — Tools Portal <strong>r22</strong> / 最終更新: 2025-09-21</div>
+    <div style="margin-top:8px">© Matsumoto Kaikei — Tools Portal <strong>r23</strong> / 最終更新: 2025-09-21</div>
   </footer>
 
   <div class="toast" id="toast">URLをコピーしました</div>
